<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- app strings-->
    <string name="app_name">Hangman</string>

    <!-- Main activity-->

    <string name="logo">Hangman</string>
    <string name="start_button">PLAY</string>
    <string name="settings_button">SETTINGS</string>
    <string name="rules_button">RULES</string>
    <string name="rules">A secret word is randomly selected and your task is to
                             guess the correct letters in the word, until the word
                            is complete. For each correct guess, the letter will
                            show on a line. If you guess wrong a gallow and a
                            hanging person will be drawn. You loose when the
                            person is hanged. Good luck!
    </string>
    <string name="exit_button">EXIT</string>
    <string name="close">Close</string>


    <!--  Hangman Activity   -->

    <string name="lose">You lose!</string>
    <string name="win">You win!</string>
    <string name="new_game">New Game</string>
    <string name="next_word">Next word</string>
    <string name="new_word">New word</string>
    <string name="congrats">Congratulations!</string>
    <string name="no_more_words">No more words!</string>
    <string name="play_again">Do you want to play again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="winsHead">WON</string>
    <string name="losesHead">LOST</string>
    <string name="win_msg">is correct!</string>
    <string name="lose_msg">Correct word is</string>
    <string name="random_cat">Random</string>


    <!--  OPTIONS ACTIVITY-->

    <string name="back">MENU</string>
    <string name="select_lang">LANGUAGE</string>
    <string name="select_cat">CATEGORY</string>
</resources>
