<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" android:background="@drawable/gamebackground">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/input_word"
            android:editable="false"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:singleLine="true"
            android:scaleX="1"
            android:gravity="center"
            android:autoText="false"
            android:textIsSelectable="false"
            android:layout_alignParentStart="true"
            android:textSize="30sp"/>
    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/hangman_image"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentEnd="false" android:contentDescription="Hangman graphics"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentEnd="true"
            android:gravity="center_horizontal" android:padding="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/winsHead"
                android:id="@+id/noOfWinsHead"
                android:gravity="center_horizontal"
                android:textSize="20sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/noOfWins"
                android:gravity="center_horizontal" android:textColor="#ff00b852"
                android:textSize="30sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/losesHead"
                android:id="@+id/noOfLostHead"
                android:gravity="center_horizontal" android:textSize="20sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/noOfLost"
                android:gravity="center_horizontal" android:textColor="#ffd00013" android:textSize="30sp"/>
    </LinearLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/back"
            android:id="@+id/back2" android:layout_alignParentTop="true" android:layout_alignParentStart="true"
            android:background="@drawable/button_menu"
            android:onClick="goBack" android:layout_marginLeft="5dp" android:layout_marginTop="5dp"
            android:textSize="20sp" android:textColor="#121212"/>
</RelativeLayout>